# crewai

./: .env  .gitignore  agent.py  crew.py  requirements.txt  tools.py
blog-posts/: new_post.md
blog-writer/: .env  agent.py  crew.py  tasks.py
blog-writer/blog-posts/: new_post.md
projects/blog-writer/db/: chroma.sqlite3
projects/shopping_agent/: README.md  deals_summary.md  final_ranked_deals_summary.md  pyproject.toml  report.md
projects/shopping_agent/src/shopping_agent/: crew.py  main.py
projects/shopping_agent/src/shopping_agent/config/: agents.yaml  tasks.yaml
