[project]
name = "shopping_agent"
version = "0.1.0"
description = "shopping_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[project.scripts]
shopping_agent = "shopping_agent.main:run"
run_crew = "shopping_agent.main:run"
train = "shopping_agent.main:train"
replay = "shopping_agent.main:replay"
test = "shopping_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
